--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,37 @@
 body {
-    width: 960px;
+    
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 header {
     background-color: #ffffff;
-    height: 100px;
+    height: 150px;
     border-color: #cccccc;
+    
 }
 
 footer {
     background-color: #666666;
+    height: 100px;
 }
 
 h1 {
-    color: red;
+    color: #ebf2e0;
+}
+
+#heading1 {
+    padding: 25px;
+    top: 150px;
+    left: 200px;
+    margin: 0;
+    background-color: #4aaaa5;
+}
+
+.maincontent {
+    width: 960px;
+
+}
+
+.floatleft {
+    float: left;
 }
